# g-adaptivity-extensions

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  pyproject.toml  setup.py
classical_meshing/: ma_mesh_1d.py  ma_mesh_2d.py  ma_mesh_3d.py
configs/: backFEM2D_poisson_square.yaml  base_config.yaml  burgers_square.yaml  navier_stokes.yaml  poisson_cube_mixed.yaml  poisson_poly.yaml  poisson_square.yaml  poisson_square_mixed.yaml  sweep_config.yaml
extensions/: inspect_dataset_item_structure.py  navier_stokes_cylinder_explicit.py  navier_stokes_cylinder_explicit_adapt_pretrained.py  navier_stokes_cylinder_explicit_adapt_pretrained_v2.py  navier_stokes_cylinder_solver.py
extensions/pretrained/: config.yaml
extensions_3d/: demo_pretrained_poisson_cube.py
extensions_weather/: demo_pretrained_poisson_square.py  load_weather.py  load_weather_v2.py  weather_mesh.py  weather_mesh_old.py  weather_mesh_v2.py  weather_mesh_v2_old.py
firedrake_difFEM/: __init__.py  difFEM_1d.py  solve_poisson.py
meshes/: H-shape.geo  H-shape.msh  L-shape.geo  L-shape.msh  cylinder_010.geo  cylinder_010.msh  cylinder_015.geo  cylinder_050.msh  cylinder_050_025.geo  cylinder_100.geo  cylinder_100.msh  cylinder_100_025.geo  cylinder_100_025.msh  cylinder_100_050.geo  cylinder_100_050.msh  headland05.geo  headland05.msh  headland1.geo  headland1.msh  headland2.geo  headland2.msh  l_shaped.msh  polygon_010.msh
navier_stokes_data/: NavierStokes_generate_data.py  __init__.py  load_NavierStokes.py  series_approximation.py
src/: __init__.py  data.py  data_mixed.py  data_mixed_loader.py  params.py  pde_data.py  pde_solvers.py  run_GNN.py  run_pipeline.py  utils_data.py  utils_eval.py  utils_eval_plotting.py  utils_main.py  utils_train.py
src/models/: __init__.py  diffformer_block.py  (+2 more)
(+7 files in other folders)
