[project]
name = "g-adaptivity"
version = "0.1.0"
description = "Project for GNN-based optimal mesh relocation"
requires-python = ">=3.9,<3.13"
authors = [
  { name = "James Rowbottom", email = "jr908@cam.ac.uk" },
  { name = "Georg Maierhofer", email = "gam37@cam.ac.uk" }
]
dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "torch-geometric==2.4.0",
  "torchdiffeq",
  "torchquad",
  "pandas",
  "plotly",
  "wandb",
  "adjustText",
  "imageio[ffmpeg]",
  "tensorboard",
  "einops",
  "pyvista",
  "torch-scatter",
  "petsctools",
  # Git dependencies below
  "animate @ git+https://github.com/pyroteus/animate.git",
  "movement @ git+https://github.com/pyroteus/movement.git",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["firedrake_difFEM", "navier_stokes_data", "classical_meshing"]
